--- a/Makefile.os2
+++ b/Makefile.os2
@@ -34,6 +34,4 @@ t64.o: t64.c t64.h
 
 # Cleanup --------------------------------------------------------------------
 clean:
-	-rm core *.o *~
-
-
+	-del core *.o *~
